--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>塔伯耶普的博客 | TanpoYip's Blog</title>
+  <title>TanpoYip's Blog</title>
   <meta name="author" content="TanpoYip">
 
   
-  <meta name="description" content="塔伯耶普的个人博客|TanpoYip.COM">
+  <meta name="description" content="TanpoYip.COM">
   <meta name="keywords" content="TanpoYip,tanpoyip,tanpoyip.com,Web,前端">
 
   <!-- http://t.co/dKP3o1e -->
@@ -21,7 +21,7 @@
   <link rel="canonical" href="http://tanpoyip.github.com">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
-  <link href="/atom.xml" rel="alternate" title="塔伯耶普的博客 | TanpoYip's Blog" type="application/atom+xml">
+  <link href="/atom.xml" rel="alternate" title="TanpoYip" type="application/atom+xml">
   <script src="/javascripts/modernizr-2.0.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/libs/jquery.min.js"%3E%3C/script%3E'))</script>
@@ -36,7 +36,7 @@
 
 <body   >
   <header role="banner"><hgroup>
-  <h1><a href="/">塔伯耶普的博客 | TanpoYip's Blog</a></h1>
+  <h1><a href="/">TanpoYip's Blog</a></h1>
   
     <h2>互联网爱好者，对Web前端开发感兴趣.</h2>
   
